tabPageFiles/ClockAndLinks/css/style.css
/**

Copyright (c) 2011 Pierce Moore, RefreshedWeb.com, and NerdTraining.info
All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
Neither the names of Pierce Moore, RefreshedWeb.com, NerdTraining.info,  nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

**/
* {
	font-family:"Aller","Gotham",verdana,tahoma,sans-serif;
}

body {
	background: url('../img/bg.jpg') no-repeat center top fixed;
    background-size: 100% 100%;
    background-origin: content-box;
	-webkit-background-size:1920px 1080px
	margin:0;
	padding:0;
}
a {
	text-decoration:none;
}
h1 {
	font-family: "Gotham Regular", sans-serif;
	color: #ffffff;
	text-shadow:0px 0px 5px #000000;
	font-size:150px;
	letter-spacing:-25px;
	margin:0;
	line-height:100px;
}
h2 {
	font-size:30px;
	font-family:"Aller","Tahoma",sans-serif;
	text-align:center;
	vertical-align:middle;
	color:#ffffff;
	text-shadow:0px 0px 4px #000000;
	padding:0;
	letter-spacing:-2px;
	margin:2px;
}
#error,#success {
	-webkit-border-radius:5px;
	width:50%;
	padding:10px;
	margin:10px auto 10px auto;
	text-align:center;
	display:none;
}
#error {
	border:1px #AB4F4F solid;
	background:#F5E1E1;
}
#success {
	border:1px #73A860 solid;
	background:#DDEDD8;
}
#form {
	position:absolute;
	z-index:100;
	top:230px;
	left:20px;
	width:100%;
}
input, button {
	font-family:"Aller",sans-serif;
	font-size:35px;
}
input[type=text] {
	width:525px;
	padding:10px 15px 10px 15px;
}
button {
	width:50px;
	height:50px;
	margin-top:-3px;
}
#timeBox {
	width:300px;
	position:fixed;
	top:20px;
	left:20px;
	float:left;
	display:block;
}
#time {
	
}
#dateBox {
	width:300px;
	position:fixed;
	bottom:20px;
	left:20px;
}
#date {
	
}
.round {
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
}
#links {
	width:50%;
	height:100%;
	position:absolute;
	top:50px;
	right:0;
}
#links a.link {
	min-width:100px;
	min-height:30px;
	padding:5px;
	margin:5px 0 0 5px;
	border:5px #999999 solid;
	background:url('black_dot_bg.png');
	float:left;
	display:block;
	-webkit-box-shadow:0px 0px 5px #777777;
	-webkit-border-radius:5px;
}
#links a.link:hover {
	border:5px #777777 solid;
	-webkit-box-shadow:0px 0px 5px #555555;
	
}
#bossiBug {
	width:130px;
	height:20px;
	position:absolute;
	bottom: 20px;
	right: 20px;
	-webkit-opacity:0.5;
}
#bossiBug:hover {
	-webkit-opacity:1;
}
#menuBar {
	padding:10px 0 10px 0;
	font-size:20px;
	/*background:url('menu_bg.png') repeat-x;*/
	background:#666666;
	color:#eeeeee;
	position:absolute;
	top:5px;
	right:5px;
	-webkit-box-shadow:0px 0px 3px #000000;
}
#menuBar a {
	padding:10px;
	color:#eeeeee;
	text-decoration:none;
	font-family:"Aller",sans-serif;
	border-right:1px #cccccc solid;
}
a.buttonDeleteLink {
	width:100%;
	height:20px;
	position:relative;
	z-index:100;
	display:block;
	color:#eeeeee;
	border-bottom:1px #bbbbbb solid;
}
a.buttonDeleteLink:hover {
	background:#eeeeee;
	color:#333333;
}
/*
#menuBar a:hover {
	background:#eeeeee;
	color:#333333;
}
*/

